# django-blog

./: .gitignore  .npmrc  Procfile  Untitled  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js
.github/ISSUE_TEMPLATE/: user-story-template.md
about/: admin.py  forms.py  models.py  urls.py  views.py
about/migrations/: 0001_initial.py  0002_collaboration.py  0003_alter_andrea_biography.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_comment_challenge.py  0003_alter_comment_body_alter_post_content.py  0004_post_featured_image.py
blog/templates/blog/: post_list.html
codestar/: settings.py  urls.py
django_blog/: settings.py
templates/: _base.html  about.html  edit_comment.html  index.html  post_detail.html
templates/account/: login.html  logout.html  signup.html
